--- a/src/components/ui/table/table.module.scss
+++ b/src/components/ui/table/table.module.scss
@@ -8,7 +8,7 @@
   background: #333;
 }
 
-body {
+.tBody {
   font-family: sans-serif;
   font-size: 14px;
   font-weight: 700;
@@ -31,6 +31,6 @@ body {
   border-bottom: 1px solid #333;
 }
 
-table {
+.table {
   border-collapse: collapse;
 }
