fix: Checkbox className prop

--- a/src/components/ui/checkbox/checkbox.module.scss
+++ b/src/components/ui/checkbox/checkbox.module.scss
@@ -1,11 +1,6 @@
-/* reset */
 .wrapper {
-  // display: flex;
-
-  // label {
-  //  cursor: pointer;
-  //  color: red;
-  // }
+  display: flex;
+  align-items: center;
 }
 
 .CheckboxRoot {
