--- a/src/components/ui/avatar/avatar.module.scss
+++ b/src/components/ui/avatar/avatar.module.scss
@@ -4,9 +4,6 @@
   align-items: center;
   justify-content: center;
 
-  width: 96px;
-  height: 96px;
-
   background-color: var(--color-dark-500);
   border-radius: 100%;
 }
@@ -15,4 +12,14 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.small {
+  width: 36px;
+  height: 36px;
+}
+
+.large {
+  width: 96px;
+  height: 96px;
 }
