--- a/src/components/ui/select/select.module.scss
+++ b/src/components/ui/select/select.module.scss
@@ -1,29 +1,19 @@
 .wrapper {
-  position: relative;
   display: flex;
   flex-direction: column;
-  width: 100%;
 }
 
 .title {
-  // font-size: var(--font-size-m);
-  // font-weight: var(--font-weight-regular);
-  // line-height: var(--line-height-m);
   color: var(--color-dark-100);
 }
 
 .trigger {
-  display: inline-flex;
+  display: flex;
   align-items: center;
   justify-content: space-between;
 
-  min-width: 20px;
-  padding: 0 6px;
-
-  //padding: 6px 0;
-
-  font-size: var(--font-size-m);
-  line-height: var(--line-height-m);
+  min-width: 200px;
+  padding: 7px 12px;
 
   background-color: transparent;
   border: 1px solid var(--color-dark-300);
@@ -42,12 +32,11 @@
   }
 
   &:focus-visible {
-    border-radius: 2px;
     outline: 2px solid var(--color-info-700);
   }
 
   &[data-placeholder] {
-    //color: var(--color-light-100);
+    // color: var(--color-light-100);
   }
 
   &[data-state='open'] {
@@ -57,16 +46,16 @@
   }
 }
 
-.value {
-  padding-left: 2px;
-  font-size: var(--font-size-m);
+.paginationTrigger {
+  min-width: 50px;
+  padding: 0 6px;
+  font-size: var(--font-size-s);
   line-height: var(--line-height-m);
-  color: var(--color-light-100);
 }
 
 .icon {
   display: flex;
-  padding-right: 2px;
+  padding: 2px;
   color: var(--color-light-100);
 }
 
@@ -75,10 +64,7 @@
   display: flex;
 
   width: var(--radix-select-trigger-width);
-  min-width: 20px;
   max-height: var(--radix-select-content-available-height);
-
-  //padding: 0 6px;
 
   background-color: var(--color-dark-900);
   border: 1px solid var(--color-dark-300);
@@ -87,17 +73,7 @@
 .item {
   cursor: pointer;
   user-select: none;
-
-  position: relative;
-
-  display: flex;
-  align-items: center;
-
-  height: 25px;
-  padding: 0 8px;
-
-  font-size: var(--font-size-m);
-  line-height: var(--line-height-m);
+  padding: 6px 12px;
 
   &[data-disabled] {
     pointer-events: none;
@@ -108,5 +84,13 @@
     color: var(--color-accent-300);
     background-color: var(--color-accent-900);
     outline: none;
+  }
+}
+
+.paginationContent {
+  .item {
+    padding: 0 6px;
+    font-size: var(--font-size-s);
+    line-height: var(--line-height-m);
   }
 }
