--- a/src/components/ui/modal/modal.module.scss
+++ b/src/components/ui/modal/modal.module.scss
@@ -1,28 +1,9 @@
-.root {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-  width: 100%;
-  max-width: 54.2rem;
-
-  .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    padding: 14px 24px;
-
-    border-bottom: 1px solid gray;
-  }
-}
-
 .overlay {
   position: fixed;
   inset: 0;
-  background-color: rgb(0 0 0 / 50%);
+  background-color: rgb(0 0 0 / 70%);
 }
+
 .content {
   position: fixed;
   top: 50%;
@@ -37,6 +18,17 @@
   border: 1px solid var(--color-dark-500, #333);
   border-radius: 2px;
 }
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 1.8rem 2.4rem;
+
+  border-bottom: 1px solid var(--color-dark-500, #333);
+}
+
 .closeButton {
   all: unset;
 
@@ -46,4 +38,14 @@
 
   width: 24px;
   height: 24px;
+
+  &:hover {
+    color: var(--color-accent-300);
+    background-color: var(--color-dark-500);
+  }
+
+  &:focus {
+    color: var(--color-info-300);
+    background-color: var(--color-dark-500);
+  }
 }
