--- a/src/components/ui/button/button.module.scss
+++ b/src/components/ui/button/button.module.scss
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .primary,
 .secondary {
   all: unset;
@@ -81,4 +86,24 @@
 
 a {
   text-decoration: none;
+}
+
+.icon {
+  align-items: center;
+
+  width: 20px;
+  height: 20px;
+
+  // line-height: 19px;
+
+  background-color: black;
+  border: none;
+
+  &:hover {
+    svg {
+      path {
+        fill: var(--color-accent-300);
+      }
+    }
+  }
 }
