--- a/src/components/ui/pagination/pagination.module.scss
+++ b/src/components/ui/pagination/pagination.module.scss
@@ -14,6 +14,8 @@
   // cursor: pointer;
   user-select: none;
 
+  min-width: 24px;
+
   background-color: transparent;
   border: none;
   border-radius: 2px;
