--- a/src/components/ui/tabs/tabs.module.scss
+++ b/src/components/ui/tabs/tabs.module.scss
@@ -14,6 +14,7 @@
       .tabsTrigger {
         cursor: pointer;
 
+        height: 36px;
         padding: 6px 24px;
 
         font-size: var(--font-size-s);
