--- a/src/components/decks/decks-table.module.scss
+++ b/src/components/decks/decks-table.module.scss
@@ -2,13 +2,15 @@
   display: flex;
   gap: 10px;
   align-items: center;
+  justify-content: center;
 }
 
 .img {
-  width: 80px;
-  max-height: 50px;
+  max-width: 70px;
+  height: 50px;
+  object-fit: cover;
 }
 
 .name {
-  width: 300px;
+  min-width: 350px;
 }
