--- a/src/pages/decks/decksPage.module.scss
+++ b/src/pages/decks/decksPage.module.scss
@@ -25,7 +25,7 @@
 }
 
 .paginationWrapper {
-  //display: flex;
-  //justify-content: center;
+  display: flex;
+  width: 100%;
   margin-top: 24px;
 }
