--- a/src/components/ui/modal/modal.module.scss
+++ b/src/components/ui/modal/modal.module.scss
@@ -24,7 +24,7 @@
   align-items: center;
   justify-content: space-between;
 
-  padding: 1.8rem 2.4rem;
+  padding: 18px 24px;
 
   border-bottom: 1px solid var(--color-dark-500, #333);
 }
@@ -36,16 +36,16 @@
 
   display: flex;
 
-  width: 24px;
-  height: 24px;
+  width: 25px;
+  height: 25px;
 
   &:hover {
     color: var(--color-accent-300);
     background-color: var(--color-dark-500);
   }
 
-  &:focus {
-    color: var(--color-info-300);
-    background-color: var(--color-dark-500);
-  }
+  //&:focus {
+  //  color: var(--color-info-300);
+  //  background-color: var(--color-dark-500);
+  //}
 }
