--- a/src/pages/decks/decksPage.module.scss
+++ b/src/pages/decks/decksPage.module.scss
@@ -11,6 +11,15 @@
 //  // width: 70%;
 //}
 
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  width: 100%;
+  margin-bottom: 7px;
+}
+
 .controlPanel {
   display: flex;
   gap: 25px;
