--- a/src/components/ui/header/HeaderDropDown/headerDropDown.module.scss
+++ b/src/components/ui/header/HeaderDropDown/headerDropDown.module.scss
@@ -1,3 +1,16 @@
+.wrapper {
+  display: flex;
+  flex-direction: row;
+  gap: 14px;
+  align-items: center;
+  justify-content: center;
+}
+
+.profileName {
+  text-decoration: underline dashed var(--color-light-100) 1px;
+  text-underline-offset: 6px;
+}
+
 .avatar {
   gap: 8px;
 }
