--- a/src/components/ui/loader/loader.module.scss
+++ b/src/components/ui/loader/loader.module.scss
@@ -1,38 +1,106 @@
 .loader {
+  position: relative;
+
+  display: block;
+
+  box-sizing: border-box;
+  width: 32px;
+  height: 90px;
+  margin: 50px auto;
+
+  background-color: var(--color-accent-100);
+  background-image: radial-gradient(
+      ellipse at center,
+      var(--color-accent-100) 34%,
+      var(--color-accent-700) 35%,
+      var(--color-accent-700) 54%,
+      var(--color-accent-100) 55%
+    ),
+    linear-gradient(var(--color-accent-700) 10px, transparent 0);
+  background-repeat: no-repeat;
+  background-position:
+    center 20px,
+    center 2px;
+  background-size: 28px 28px;
+  border-bottom: 10px solid var(--color-accent-700);
+  border-radius: 50% 50% 0 0;
+
+  animation: animloaderBack 1s linear infinite alternate;
+}
+
+.loader::before {
+  content: '';
+
   position: absolute;
-  top: 50%;
+  top: 67px;
   left: 50%;
-  transform: translate(-80px);
+  transform: translateX(-50%);
 
-  aspect-ratio: 1;
-  width: 40px;
-  margin: 0 auto;
+  box-sizing: border-box;
+  width: 64px;
+  height: 44px;
 
-  background: var(--color-accent-500);
-  clip-path: inset(0);
-  box-shadow: 0 0 60px 15px var(--color-accent-500);
-
-  animation:
-    l4-1 0.5s ease-in-out infinite alternate,
-    l4-2 1s ease-in-out infinite;
+  border-radius: 50%;
+  box-shadow: 0 15px var(--color-accent-700) inset;
 }
 
-@keyframes l4-1 {
+.loader::after {
+  content: '';
+
+  position: absolute;
+  top: 112%;
+  left: 50%;
+  transform: translateX(-50%) rotate(45deg);
+
+  box-sizing: border-box;
+  width: 34px;
+  height: 34px;
+
+  background: radial-gradient(
+    ellipse at center,
+    var(--color-accent-100) 8%,
+    rgb(112 78 204 / 60%) 24%,
+    rgb(0 0 0 / 0%) 100%
+  );
+  background-repeat: no-repeat;
+  background-position: -44px -44px;
+  background-size: 100px 100px;
+  border-radius: 50% 50% 0;
+  box-shadow: 4px 4px 12px 0 rgb(112 78 204 / 50%);
+
+  animation: animloader 1s linear infinite alternate;
+}
+
+@keyframes animloaderBack {
+  0%,
+  30%,
+  70% {
+    transform: translateY(0);
+  }
+
+  20%,
+  40%,
   100% {
-    transform: translateX(80px);
+    transform: translateY(-5px);
   }
 }
 
-@keyframes l4-2 {
-  33% {
-    clip-path: inset(0 0 0 -100px);
+@keyframes animloader {
+  0% {
+    width: 34px;
+    height: 34px;
+
+    background-position: -44px -44px;
+    background-size: 100px 100px;
+    box-shadow: 4px 4px 12px 2px rgb(112 78 204 / 75%);
   }
 
-  50% {
-    clip-path: inset(0 0 0 0);
-  }
+  100% {
+    width: 30px;
+    height: 28px;
 
-  83% {
-    clip-path: inset(0 -100px 0 0);
+    background-position: -36px -36px;
+    background-size: 80px 80px;
+    box-shadow: 2px 2px 8px 0 rgb(112 78 204 / 50%);
   }
 }
