--- a/src/components/auth/sign-up-form/sign-up-form.module.scss
+++ b/src/components/auth/sign-up-form/sign-up-form.module.scss
@@ -29,10 +29,17 @@
   margin-bottom: 11px;
 }
 .signInLink {
+  cursor: pointer;
   display: flex;
   justify-content: center;
 
-  font-size: 16px;
-  font-weight: 700;
-  color: #8c61ff;
+  font-size: var(--font-size-m);
+  font-weight: var(--font-weight-bold);
+  color: var(--color-accent-500);
+  text-decoration-color: var(--color-accent-500);
+
+  &:hover {
+    color: var(--color-accent-300);
+    transition: all 0.3s;
+  }
 }
