--- a/src/components/decks/decks-table.module.scss
+++ b/src/components/decks/decks-table.module.scss
@@ -5,9 +5,20 @@
   justify-content: center;
 }
 
+.nameWrapper {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.imgWrapper {
+  width: 70px;
+  height: 50px;
+}
+
 .img {
   max-width: 70px;
-  height: 50px;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -19,4 +30,8 @@
   width: 16px;
   height: 16px;
   line-height: 0;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
