--- a/src/components/ui/table/table.module.scss
+++ b/src/components/ui/table/table.module.scss
@@ -5,7 +5,7 @@
 
   text-align: left;
 
-  background: #333;
+  background: var(--color-dark-500);
 }
 
 .tBody {
@@ -28,9 +28,13 @@
   padding: 6px 24px;
   font-weight: 400;
   text-align: left;
-  border-bottom: 1px solid #333;
+  border-bottom: 1px solid var(--color-dark-500);
 }
 
 .table {
   border-collapse: collapse;
+}
+
+.tr:hover {
+  background-color: var(--color-dark-700);
 }
